<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/loginbackground"
>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@mipmap/logo"
        android:contentDescription="@string/app_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/account"
        android:textSize="25sp"
        android:hint="@string/username_hint"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/frame_transparent"
        android:textCursorDrawable="@null"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/password"
        android:textSize="25sp"
        android:hint="@string/password_hint"
        android:padding="10dp"
        android:inputType="textPassword"
        android:background="@drawable/frame_transparent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textCursorDrawable="@null"
        android:layout_marginTop="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/login"
        android:text="@string/login"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:background="@drawable/frame_border"
        android:layout_margin="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/to_register"
        android:text="@string/register"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:background="@drawable/frame_border"
        android:layout_margin="10dp"/>

</LinearLayout>
