<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/registerbackground">
    <EditText

        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/r_account"
        android:textSize="25sp"
        android:hint="@string/username_hint"
        android:background="@drawable/frame_transparent"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/r_password"
        android:textSize="25sp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:background="@drawable/frame_transparent"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/r_age"
        android:textSize="25sp"
        android:digits="1234567890"
        android:inputType="number"
        android:hint="@string/age_hint"
        android:background="@drawable/frame_transparent"
        android:layout_margin="10dp"
        android:padding="10dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/register"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:background="@drawable/frame_border"
        android:layout_margin="10dp"
        android:textSize="25sp"/>
</LinearLayout>
